--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1"
+  },
+  "dependencies": {    
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.2.2"
   }
 }
